--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,8 @@
                 <input type="text" name="city" id="city">
 
                 <label for='units'>Enter Units: <label>
-<!--                 <input type="text" name="units" id="units">
-                <label for='appid'>Enter your API KEY: <label> -->
+                <input type="text" name="units" id="units">
+                <label for='appid'>Enter your API KEY: <label>
                 <input type="text" name="appid" id="appid">
                 <input type="submit" value="Search">
             </form>
