--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,8 @@
 
                 <label for='units'>Enter Units: <label>
                 <input type="text" name="units" id="units">
-                <label for='appid'>Enter your API KEY: <label>
-                <input type="text" name="appid" id="appid">
+<!--                 <label for='appid'>Enter your API KEY: <label>
+                <input type="text" name="appid" id="appid"> -->
                 <input type="submit" value="Search">
             </form>
         </div>
