--- a/templates/index.html
+++ b/templates/index.html
@@ -46,16 +46,14 @@
 </head>
 <body>
     <div class="weather-app">
-        <h1>Weather App</h1>
+       <form action="/weatherapp",method="POST">
+            <h1>Weather App</h1>
         <input type="text" id="city" placeholder="Enter city name">
-        <button onclick="getWeather()">Get Weather</button>
-
-        <div class="weather-info" id="weatherInfo">
-            <!-- Weather information will appear here -->
-        </div>
+        <button type="Submit">Get Weather</button>
+      </form>
     </div>
 
-    <script>
+<!--     <script>
         async function getWeather() {
             const city = document.getElementById('city').value;
             const apiKey = 'c14526564aebf77480c65ea5895de9a9';  // Replace with your OpenWeatherMap API key
@@ -85,6 +83,6 @@
                 document.getElementById('weatherInfo').innerHTML = `<p>Unable to fetch weather data</p>`;
             }
         }
-    </script>
+    </script> -->
 </body>
 </html>
