--- a/templates/index.html
+++ b/templates/index.html
@@ -45,11 +45,11 @@
     </style>
 </head>
 <body>
-    <div class="weather-app">
+    <div class="form">
        <form action="/weatherapp",method="POST">
-            <h1>Weather App</h1>
-        <input type="text" id="city" placeholder="Enter city name">
-        <button type="Submit">Get Weather</button>
+               <label for='city'>enter city: <label>
+                <input type="text" name="city" id="city">
+        <input type="submit" value="Search">
       </form>
     </div>
 
