--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
             height: 100vh;
             margin: 0;
         }
-        .weather-app {
+        .form {
             text-align: center;
             background-color: white;
             padding: 20px;
